hphp/hack/test/typecheck/argument_unpacking/unpack_call3.php.exp
File "unpack_call3.php", line 7, characters 8-12:
Invalid argument (Typing[4110])
  File "unpack_call3.php", line 7, characters 8-12:
  This is an object of type Traversable (it is unpacked with '...')
  File "unpack_call3.php", line 6, characters 11-18:
  It is incompatible with a string
File "unpack_call3.php", line 7, characters 3-13:
Too few arguments (Typing[4104])
  File "unpack_call3.php", line 3, characters 10-10:
  Definition is here
